navbar casi listo, botones registro estan, conecte el registro y diferentes parte de la pagina, ahora agregar las card de pokeballs y medicina

--- a/createAccount.html
+++ b/createAccount.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    
-    <img src="images/createAccountImages/pkmnLogo.png" id="pokeLogo">
+    <!--Logo de pokeshop que redirige a la pagina principal-->
+    <a href="index.html"><img src="images/createAccountImages/pkmnLogo.png" id="pokeLogo"> </a><
     <div class="container2">
         <br>
         <h1 class="registration-h1"><strong>Create account</strong></h1>
