agrege las card de las medicina y las pokeballs

--- a/Medicina.html
+++ b/Medicina.html
@@ -49,7 +49,44 @@
         </div>
     </nav>
     <!--fin del navbar-->
-
+    <!--Tarjetas de Medecina-->
+    <div class="container">
+         <div class="card" style="width: 18rem; position: -ms-page;">
+      <a href="Pokeballs.html"><img src="images/Medicina/potion.png" class="card-img-top" alt="..."></a>
+      <div class="card-body">
+        <p class="card-text">
+          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
+          listas para que nunca se te escape ningún Pokémon.
+        </p>
+      </div>
+    </div>
+     <div class="card" style="width: 18rem;">
+      <a href="Pokeballs.html"><img src="images/Medicina/super-potion.png" class="card-img-top" alt="..."></a>
+      <div class="card-body">
+        <p class="card-text">
+          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
+          listas para que nunca se te escape ningún Pokémon.
+        </p>
+      </div>
+    </div>
+     <div class="card" style="width: 18rem;">
+      <a href="Pokeballs.html"><img src="images/Medicina/hyper-potion.png" class="card-img-top" alt="..."></a>
+      <div class="card-body">
+        <p class="card-text">
+          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
+          listas para que nunca se te escape ningún Pokémon.
+        </p>
+      </div>
+    </div>
+     <div class="card" style="width: 18rem;">
+      <a href="Pokeballs.html"><img src="images/Medicina/revive.png" class="card-img-top" alt="..."></a>
+      <div class="card-body">
+        <p class="card-text">
+          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
+          listas para que nunca se te escape ningún Pokémon.
+        </p>
+      </div>
+    </div>
 
 
 
