--- a/Pokeballs.html
+++ b/Pokeballs.html
@@ -50,42 +50,46 @@
     </nav>
     <!--fin del navbar-->
     <div class="container">
-         <div class="card" style="width: 18rem;">
-      <a href="Pokeballs.html"><img src="images/imagenPrincipal/Poké_Balls.png" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-        <p class="card-text">
-          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
-          listas para que nunca se te escape ningún Pokémon.
-        </p>
-      </div>
-    </div>
-     <div class="card" style="width: 18rem;">
-      <a href="Pokeballs.html"><img src="images/imagenPrincipal/Poké_Balls.png" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-        <p class="card-text">
-          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
-          listas para que nunca se te escape ningún Pokémon.
-        </p>
-      </div>
-    </div>
-     <div class="card" style="width: 18rem;">
-      <a href="Pokeballs.html"><img src="images/imagenPrincipal/Poké_Balls.png" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-        <p class="card-text">
-          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
-          listas para que nunca se te escape ningún Pokémon.
-        </p>
-      </div>
-    </div>
-     <div class="card" style="width: 18rem;">
-      <a href="Pokeballs.html"><img src="images/imagenPrincipal/Poké_Balls.png" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-        <p class="card-text">
-          <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor calidad,
-          listas para que nunca se te escape ningún Pokémon.
-        </p>
-      </div>
-    </div>
+        <div class="card" style="width: 18rem;">
+            <a href=""><img src="images/Pokeballs/poke.png" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+                <p class="card-text">
+                    <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
+                    calidad,
+                    listas para que nunca se te escape ningún Pokémon.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href=""><img src="images/Pokeballs/ultra.png" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+                <p class="card-text">
+                    <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
+                    calidad,
+                    listas para que nunca se te escape ningún Pokémon.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href=""><img src="images/Pokeballs/great.png" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+                <p class="card-text">
+                    <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
+                    calidad,
+                    listas para que nunca se te escape ningún Pokémon.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="Pokeballs.html"><img src="images/Pokeballs/cherish.png" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+                <p class="card-text">
+                    <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
+                    calidad,
+                    listas para que nunca se te escape ningún Pokémon.
+                </p>
+            </div>
+        </div>
     </div>
 
 
