Mejora apartado visual, menu

--- a/createAccount.html
+++ b/createAccount.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Apartado estilos y fuentes -->
     <link rel="stylesheet" href="CSS/createAccountStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link
@@ -11,13 +12,15 @@
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
     crossorigin="anonymous"
     />
+    <!-- Script JQuery y JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <title>Registro usuario PokéShop</title>
+    <title>PokéShop Registration</title>
 </head>
 
 <body>
     
     <img src="images/createAccountImages/pkmnLogo.png" id="pokeLogo">
+    <!-- Container Create Account -->
     <div class="container2">
         <br>
         <h1 class="registration-h1"><strong>Create account</strong></h1>
@@ -63,7 +66,7 @@
 
         <div class="row mb-3">
             <div class="col">
-                <p>Do you already have an account? <a href="https://corxea.cl/">Log in</a></p>
+                <p>Do you already have an account? <a href="menuPokeShop.html">Log in</a></p>
             </div>
         </div>
         
