Cambios catalogo pokeball (falta profundizar)

--- a/cataloguePokeballs.html
+++ b/cataloguePokeballs.html
@@ -58,18 +58,7 @@
     
     <div class="container">
         <div class="card" style="width: 18rem;">
-            <a href=""><img src="images/pokeballsImages/01honorball.png" class="card-img-top" alt="..."></a>
-            <div class="card-body">
-                <p class="card-text">
-                    ⚡<strong>¡Atrapa a todos con estilo! </strong>⚡
-                    En nuestra tienda encontrarás PokeBalls de la mejor
-                    calidad,
-                    listas para que nunca se te escape ningún Pokémon.
-                </p>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <a href=""><img src="images/pokeballsImages/00pokéball.png" class="card-img-top" alt="..."></a>
+            <a href=""><img src="images/pokeballsImages/pokeballsWithoutBorder/00pokeball.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
                 <p class="card-text">
                     <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
@@ -79,7 +68,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <a href=""><img src="images/pokeballsImages/02superball.png" class="card-img-top" alt="..."></a>
+            <a href=""><img src="images/pokeballsImages/pokeballsWithoutBorder/01honorball.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
                 <p class="card-text">
                     <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
@@ -89,7 +78,17 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <a href="Pokeballs.html"><img src="images/pokeballsImages/03ultraball.png" class="card-img-top" alt="..."></a>
+            <a href=""><img src="images/pokeballsImages/pokeballsWithoutBorder/03ultraball.png" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+                <p class="card-text">
+                    <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
+                    calidad,
+                    listas para que nunca se te escape ningún Pokémon.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <a href="Pokeballs.html"><img src="images/pokeballsImages/pokeballsWithoutBorder/04masterball.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
                 <p class="card-text">
                     <strong>¡Atrapa a todos con estilo! </strong>⚡ En nuestra tienda encontrarás PokeBalls de la mejor
