--- a/menuPokeShop.html
+++ b/menuPokeShop.html
@@ -138,7 +138,7 @@
     <footer>
         <div class="text-center p-3" width="100%">
                 © 2025 Copyright:
-                <a class="text-dark" href="#" id="pokeshop">PokéShop.com</a>
+                <a class="text-dark" href="#" id="pokeshop">PokeShop.com</a>
         </div>
     </footer>
     
