--- a/menuPokeShop.html
+++ b/menuPokeShop.html
@@ -16,18 +16,14 @@
     <!-- Script JQuery y JS -->
     <script src="JS/sideBarScript.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="JS/createAccountScript.js"></script>
     <title>Poké-Shop</title>
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Comienzo navbar -->
     <nav id="nav1">
-        <ul>
-            <li><a href="menuPokeShop.html"><img src="images/menuPokeShopImages/pokeballIcon.png" height="50px" width="50px" alt="pagPrincipal" id="pokeballIcon"></a></li>
-            <li><a href="#">Cart</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="createAccount.html">Register</a></li>
-        </ul>
+        <il id="authLinks"></il>
     </nav>
 
     <nav id="nav2">
@@ -134,14 +130,14 @@
         </div>
     
 
+    <br>
     <!-- Pie de página -->
+    <footer class="bg-light text-center text-lg-start">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.03);">
+            © 2025 Copyright:
+            <a class="text-dark" href="#" id="pokeshop">PokéShop.com</a>
     <footer>
-        <div class="text-center p-3" width="100%">
-                © 2025 Copyright:
-                <a class="text-dark" href="#" id="pokeshop">PokeShop.com</a>
-        </div>
-    </footer>
-    
+
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
